--- a/Marvel/Modules/Dashboard/View/Cell/CharacterTableViewCell.xib
+++ b/Marvel/Modules/Dashboard/View/Cell/CharacterTableViewCell.xib
@@ -1,38 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="CharacterTableViewCell" customModule="Marvel" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="113" id="KGk-i7-Jjw" customClass="CharacterTableViewCell" customModule="Marvel" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="342" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="342" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v93-fd-CKq">
-                        <rect key="frame" x="12" y="11.5" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gv4-q3-BuT">
+                        <rect key="frame" x="8" y="8" width="326" height="96"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v93-fd-CKq">
+                                <rect key="frame" x="12" y="8" width="210" height="80"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Ne-iA-mgZ">
+                                <rect key="frame" x="230" y="8" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="OLe-Ph-euj"/>
+                                    <constraint firstAttribute="width" constant="80" id="QWv-uT-XIb"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="v93-fd-CKq" firstAttribute="centerY" secondItem="gv4-q3-BuT" secondAttribute="centerY" id="OQz-ji-ktJ"/>
+                            <constraint firstItem="v93-fd-CKq" firstAttribute="top" secondItem="gv4-q3-BuT" secondAttribute="top" constant="8" id="QX1-hg-yOr"/>
+                            <constraint firstAttribute="trailing" secondItem="5Ne-iA-mgZ" secondAttribute="trailing" constant="16" id="T6p-Bn-Hcb"/>
+                            <constraint firstItem="5Ne-iA-mgZ" firstAttribute="leading" secondItem="v93-fd-CKq" secondAttribute="trailing" constant="8" id="f1c-pV-H7U"/>
+                            <constraint firstItem="5Ne-iA-mgZ" firstAttribute="centerY" secondItem="gv4-q3-BuT" secondAttribute="centerY" id="fgl-8I-nEt"/>
+                            <constraint firstItem="5Ne-iA-mgZ" firstAttribute="top" secondItem="gv4-q3-BuT" secondAttribute="top" constant="8" id="gHl-sZ-VA7"/>
+                            <constraint firstItem="v93-fd-CKq" firstAttribute="leading" secondItem="gv4-q3-BuT" secondAttribute="leading" constant="12" id="sQb-xt-33n"/>
+                            <constraint firstAttribute="bottom" secondItem="5Ne-iA-mgZ" secondAttribute="bottom" constant="8" id="w8L-Gi-R6z"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="v93-fd-CKq" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="1aH-Nb-ey2"/>
-                    <constraint firstItem="v93-fd-CKq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="DGb-rk-5r3"/>
+                    <constraint firstAttribute="bottom" secondItem="gv4-q3-BuT" secondAttribute="bottom" constant="8" id="9Lb-PU-Cd0"/>
+                    <constraint firstAttribute="trailing" secondItem="gv4-q3-BuT" secondAttribute="trailing" constant="8" id="BaF-23-O7B"/>
+                    <constraint firstItem="gv4-q3-BuT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="fu8-MS-1ec"/>
+                    <constraint firstItem="gv4-q3-BuT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="rXW-vS-1wE"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="characterImageView" destination="5Ne-iA-mgZ" id="hBQ-AB-Mlu"/>
                 <outlet property="nameCharacterLabel" destination="v93-fd-CKq" id="M9R-Ng-9UF"/>
+                <outlet property="viewContentShadow" destination="gv4-q3-BuT" id="od8-ue-hKE"/>
             </connections>
-            <point key="canvasLocation" x="35" y="96"/>
+            <point key="canvasLocation" x="50.724637681159422" y="118.86160714285714"/>
         </tableViewCell>
     </objects>
 </document>
