--- a/Marvel/Modules/DetailCharacter/View/Cells/DetailCharacterCollectionViewCell.xib
+++ b/Marvel/Modules/DetailCharacter/View/Cells/DetailCharacterCollectionViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,23 +18,30 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lhF-Fv-3Qs">
-                        <rect key="frame" x="12" y="0.0" width="163" height="112"/>
+                        <rect key="frame" x="12" y="87" width="163" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iNJ-eo-vrB">
+                        <rect key="frame" x="0.0" y="0.0" width="187" height="87"/>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" systemColor="systemGray3Color"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="lhF-Fv-3Qs" secondAttribute="bottom" id="eL2-XX-fr8"/>
-                <constraint firstItem="lhF-Fv-3Qs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="eeF-Pl-NHf"/>
+                <constraint firstItem="iNJ-eo-vrB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="2oJ-Gi-1mf"/>
+                <constraint firstItem="iNJ-eo-vrB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ELT-IU-xmi"/>
+                <constraint firstAttribute="bottom" secondItem="lhF-Fv-3Qs" secondAttribute="bottom" constant="8" id="eL2-XX-fr8"/>
                 <constraint firstAttribute="trailing" secondItem="lhF-Fv-3Qs" secondAttribute="trailing" constant="12" id="fpF-YH-pAu"/>
+                <constraint firstAttribute="trailing" secondItem="iNJ-eo-vrB" secondAttribute="trailing" id="gh3-Mf-hfw"/>
                 <constraint firstItem="lhF-Fv-3Qs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="hgX-uV-URU"/>
+                <constraint firstItem="lhF-Fv-3Qs" firstAttribute="top" secondItem="iNJ-eo-vrB" secondAttribute="bottom" id="tpq-0U-wJ4"/>
             </constraints>
             <size key="customSize" width="187" height="112"/>
             <connections>
+                <outlet property="comicImageView" destination="iNJ-eo-vrB" id="IDE-8b-Q3J"/>
                 <outlet property="labelName" destination="lhF-Fv-3Qs" id="dNK-OP-3DR"/>
             </connections>
             <point key="canvasLocation" x="44.20289855072464" y="82.366071428571431"/>
